[$] Sass/Bootstrap: Header

--- a/index.html
+++ b/index.html
@@ -89,10 +89,29 @@
                 <div class="row justify-content-center justify-content-md-start align-items-center">
                     <div class="col-12 col-md-10">
                         
-                        <nav class="navbar navbar-expand-md navbar-dark">
-                            <button class="navbar-toggler my-1" type="button" data-toggle="collapse" data-target="#menu-main" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <nav class="navbar navbar-expand-md navbar-light navbar-md-dark">
+
+                            <div class="row w-100">
+                                <div class="col-2 col-md-12">
+                                    <button class="navbar-toggler my-1" type="button" data-toggle="collapse" data-target="#menu-main" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                    </button>
+                                </div>
+                                <div class="col-10 d-md-none">
+                                    <a class="d-flex flex-column logo-md" href="#">
+                                        <!--img class="img-fluid mx-auto" src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo"-->
+                                        <div class="logo"></div>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <!--button class="navbar-toggler my-1" type="button" data-toggle="collapse" data-target="#menu-main" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
+                            <a class="logo" href="#">
+                                <img class="img-fluid mx-auto" src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo">
+                            </a--> 
+
                             <div id="menu-main" class="collapse navbar-collapse justify-content-md-start menu-main">
                                 <ul class="menu navbar-nav text-uppercase">
                                     <li><a class="nav-link" href="#">Nosotros</a></li>
@@ -100,7 +119,7 @@
                                     <li><a class="nav-link" href="#">Clases</a></li>
                                     <li><a class="nav-link" href="#">Galería</a></li>
                                     <li><a class="nav-link" href="#">Contacto</a></li>
-                                    <li><a class="nav-link my-2 my-sm-0" href="#">Cotice ahora!</a></li>
+                                    <li><a class="nav-link my-2 my-sm-0 btn btn-primary" href="#">Cotice ahora!</a></li>
                                 </ul>  <!-- #menu-main -->
                             </div>  <!-- .navbar -->
                         </nav>  <!-- .nav -->
