[$] Sass/Bootstrap: navbar header bottom

--- a/index.html
+++ b/index.html
@@ -87,42 +87,30 @@
             <div class="container">
 
                 <div class="row justify-content-center justify-content-md-start align-items-center">
-                    <div class="col-12 col-md-10">
-                        
+                    <div class="col-12">
+
                         <nav class="navbar navbar-expand-md navbar-light navbar-md-dark">
-
-                            <div class="row w-100">
-                                <div class="col-2 col-md-12">
-                                    <button class="navbar-toggler my-1" type="button" data-toggle="collapse" data-target="#menu-main" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                        <span class="navbar-toggler-icon"></span>
-                                    </button>
-                                </div>
-                                <div class="col-10 d-md-none">
-                                    <a class="d-flex flex-column logo-md" href="#">
-                                        <!--img class="img-fluid mx-auto" src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo"-->
-                                        <div class="logo"></div>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <!--button class="navbar-toggler my-1" type="button" data-toggle="collapse" data-target="#menu-main" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <a class="navbar-brand d-inline-block d-md-none" href="#">
+                                <div class="logo--small"></div>
+                                <!--img class="img-fluid mx-auto logo--inside-menu" src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo"-->
+                            </a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-main" aria-controls="menu-main" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="logo" href="#">
-                                <img class="img-fluid mx-auto" src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo">
-                            </a--> 
-
-                            <div id="menu-main" class="collapse navbar-collapse justify-content-md-start menu-main">
-                                <ul class="menu navbar-nav text-uppercase">
+                            <div class="collapse navbar-collapse menu-main" id="menu-main">
+                                <ul class="navbar-nav mr-auto text-uppercase">
                                     <li><a class="nav-link" href="#">Nosotros</a></li>
                                     <li><a class="nav-link" href="#">Blog</a></li>
                                     <li><a class="nav-link" href="#">Clases</a></li>
                                     <li><a class="nav-link" href="#">Galería</a></li>
                                     <li><a class="nav-link" href="#">Contacto</a></li>
-                                    <li><a class="nav-link my-2 my-sm-0 btn btn-primary" href="#">Cotice ahora!</a></li>
-                                </ul>  <!-- #menu-main -->
-                            </div>  <!-- .navbar -->
-                        </nav>  <!-- .nav -->
+                                    <li><a class="nav-link my-2 my-sm-0 btn btn-primary btn__action btn__inside--menu" href="#">Cotice ahora!</a></li>
+                                </ul>
+                                <span class="navbar-text">
+                                    <a class="nav-link my-2 my-sm-0 btn btn-primary text-uppercase btn__action btn__outside--menu" href="#">Cotice ahora!!!</a>
+                                </span>
+                            </div>
+                        </nav>
 
                     </div>
                 </div>    
