--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
                         <div class="card">
                             <!--img src="https://picsum.photos/id/1026/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
-                            <img src="./dist/assets/images/services/1.jpg"
-                                class="card-img-top img-fluid mx-auto d-block" alt="img1">
-                            <div class="card-body">
+                            <img src="./dist/assets/images/services/1.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="img1">
+                            <img class="card--icon" src="./dist/assets/images/services/1.svg" class="card-img-top img-fluid mx-auto d-block" alt="ico1">
+                            <div class="card-body">            
                                 <h5 class="card-title">Servicio 1</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural
                                     lead-in to additional content. This content is a little bit longer.</p>
@@ -145,9 +145,9 @@
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <!--img src="https://picsum.photos/id/103/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
-                            <img src="./dist/assets/images/services/2.jpg"
-                                class="card-img-top img-fluid mx-auto d-block" alt="img2">
-                            <div class="card-body">
+                            <img src="./dist/assets/images/services/2.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="img2">
+                            <img class="card--icon" src="./dist/assets/images/services/1.svg" class="card-img-top img-fluid mx-auto d-block" alt="ico1">
+                            <div class="card-body">            
                                 <h5 class="card-title">Servicio 2</h5>
                                 <p class="card-text">This card has supporting text below as a natural lead-in to
                                     additional content.</p>
@@ -158,9 +158,9 @@
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
-                            <img src="./dist/assets/images/services/3.jpg"
-                                class="card-img-top img-fluid mx-auto d-block" alt="img3">
-                            <div class="card-body">
+                            <img src="./dist/assets/images/services/3.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="img3">
+                            <img class="card--icon" src="./dist/assets/images/services/1.svg" class="card-img-top img-fluid mx-auto d-block" alt="ico1">
+                            <div class="card-body">            
                                 <h5 class="card-title">Servicio 3</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This card has even longer content than the first to
@@ -172,9 +172,9 @@
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
-                            <img src="./dist/assets/images/services/4.jpg"
-                                class="card-img-top img-fluid mx-auto d-block" alt="img4">
-                            <div class="card-body">
+                            <img src="./dist/assets/images/services/4.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="img4">
+                            <img class="card--icon" src="./dist/assets/images/services/1.svg" class="card-img-top img-fluid mx-auto d-block" alt="ico1">
+                            <div class="card-body">            
                                 <h5 class="card-title">Servicio 4</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This card has even longer content than the first to
@@ -186,9 +186,9 @@
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
-                            <img src="./dist/assets/images/services/5.jpg"
-                                class="card-img-top img-fluid mx-auto d-block" alt="img5">
-                            <div class="card-body">
+                            <img src="./dist/assets/images/services/5.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="img5">
+                            <img class="card--icon" src="./dist/assets/images/services/1.svg" class="card-img-top img-fluid mx-auto d-block" alt="ico1">
+                            <div class="card-body">            
                                 <h5 class="card-title">Servicio 5</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This card has even longer content than the first to
@@ -200,9 +200,9 @@
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
-                            <img src="./dist/assets/images/services/6.jpg"
-                                class="card-img-top img-fluid mx-auto d-block" alt="img6">
-                            <div class="card-body">
+                            <img src="./dist/assets/images/services/6.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="img6">
+                            <img class="card--icon" src="./dist/assets/images/services/1.svg" class="card-img-top img-fluid mx-auto d-block" alt="ico1">
+                            <div class="card-body">            
                                 <h5 class="card-title">Servicio 6</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This card has even longer content than the first to
@@ -214,9 +214,9 @@
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
-                            <img src="./dist/assets/images/services/7.jpg"
-                                class="card-img-top img-fluid mx-auto d-block" alt="img7">
-                            <div class="card-body">
+                            <img src="./dist/assets/images/services/7.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="img7">
+                            <img class="card--icon" src="./dist/assets/images/services/1.svg" class="card-img-top img-fluid mx-auto d-block" alt="ico1">
+                            <div class="card-body">            
                                 <h5 class="card-title">Servicio 7</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This card has even longer content than the first to
@@ -228,9 +228,9 @@
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
-                            <img src="./dist/assets/images/services/8.jpg" 
-                                class="card-img-top img-fluid mx-auto d-block" alt="img8">
-                            <div class="card-body">
+                            <img src="./dist/assets/images/services/8.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="img8">
+                            <img class="card--icon" src="./dist/assets/images/services/1.svg" class="card-img-top img-fluid mx-auto d-block" alt="ico1">
+                            <div class="card-body">            
                                 <h5 class="card-title">Servicio 8</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This card has even longer content than the first to
