--- a/index.html
+++ b/index.html
@@ -253,112 +253,63 @@
     </section><!-- .our-services -->
 
     <div class="container">
-        <main class="main-content">
-            <section class="why-us">
+        <div class="main-content">
+            <section class="us">
+
                 <div class="row">
-                    <section class="quote-form col-md-6">
-                        <hgroup>
-                            <h3>Cotice ahora</h3>
-                            <h2>Cuentenos que desea</h2>
-                        </hgroup>
+                    <div class="col-12 col-md-6">
 
-                        <form>
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <input type="text" class="form-control" id="name" placeholder="Nombre">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <input type" class="form-control" id="email" placeholder="Correo electrónico">
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-4">
-                                    <input type="text" class="form-control" id="phone" placeholder="Teléfono">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <input type="text" class="form-control" id="address" placeholder="Dirección">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <input type="text" class="form-control" id="city" placeholder="Ciudad">
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-8">
-                                    <select id="service" class="form-control">
-                                        <option selected>Seleccione el servicio...</option>
-                                        <option>...</option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="files" required>
-                                        <label class="custom-file-label" for="files">Adjuntar archivo...</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <textarea class="form-control" id="details"
-                                        rows="3">Detalles de lo que desea cotizar</textarea>
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="terms-conditions"
-                                            required>
-                                        <label class="form-check-label" for="terms-conditions">
-                                            Acepto términos y condiciones
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Enviar</button>
-                        </form>
-                    </section>
-                    <section class="why-us col-md-6">
-                        <hgroup>
-                            <h3>Por que elegirnos</h3>
-                            <h2>Cómo trabajamos</h2>
-                        </hgroup>
-                        <ul>
-                            <li>Característica 1</li>
-                            <li>Característica 2</li>
-                            <li>Característica 3</li>
-                            <li>Característica 4</li>
-                            <li>Característica 5</li>
-                        </ul>
-                    </section>
+                        <section class="us__choose-us">
+                            <hgroup>
+                                <h3>Por que elegirnos</h3>
+                                <h2>Cómo trabajamos</h2>
+                            </hgroup>
+                            <ul>
+                                <li>Característica 1</li>
+                                <li>Característica 2</li>
+                                <li>Característica 3</li>
+                                <li>Característica 4</li>
+                                <li>Característica 5</li>
+                            </ul>
+                        </section>
+
+                    </div>
+                    <div class="col-12 col-md-6">
+
+                        <section class="us__we-do-it">
+                            <hgroup>
+                                <h3>Cotice ahora</h3>
+                                <h2>Cuentenos que desea</h2>
+                            </hgroup>
+                            <img class="img-fluid" src="./dist/assets/images/roof.jpg" alt="Lo hacemos por UD">    
+                        </section>  
+
+                    </div>
                 </div>
 
-                <div class="col-md-12">
-                    <hgroup>
-                        <h3>Llamenos a</h3>
-                        <h2>0180009876231</h2>
-                    </hgroup>
-                    <button>Cotice ya!</button>
-                </div>
-            </section>
-            <section class="brands">
-                <div class="card-deck">
-                    <div class="card">
-                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card">
-                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card">
-                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card">
-                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card">
-                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
+                <div class="row justify-content-center align-content-center">
+                    <div class="col-12 col-md-8 col-lg-10">
+
+                        <section class="us__call-us">
+                            
+                            <div class="row justify-content-between align-items-center">
+                                <div class="col-12 col-md-6">
+                                    <hgroup>
+                                        <h3>Llamenos a</h3>
+                                        <h2>0180009876231</h2>
+                                    </hgroup>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <a class="nav-link my-2 my-sm-0 btn btn-secondary btn__action" href="#">Cotice ahora!</a>
+                                </div>
+                            </div>
+                        </section>
+
                     </div>
                 </div>
+
             </section>
-        </main>
+        </div>
         <aside class="sidebar">
             <h3>Barra lateral</h3>
         </aside>
