[+] Sección: Nosotros > Acordión: Por qué elegirnos

--- a/index.html
+++ b/index.html
@@ -264,13 +264,48 @@
                                 <h3>Por que elegirnos</h3>
                                 <h2>Cómo trabajamos</h2>
                             </hgroup>
-                            <ul>
-                                <li>Característica 1</li>
-                                <li>Característica 2</li>
-                                <li>Característica 3</li>
-                                <li>Característica 4</li>
-                                <li>Característica 5</li>
-                            </ul>
+                            <div class="tabs">
+                                <div class="tab">
+                                    <input type="radio" id="rd0" name="rd">
+                                    <label for="rd0" class="tab-close">Cerrar &times;</label>
+                                </div>
+                                <div class="tab">
+                                    <input type="radio" id="rd1" name="rd">
+                                    <label class="tab-label" for="rd1"><i class="fas fa-check"></i>Item 1</label>
+                                    <div class="tab-content">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, facilis.
+                                    </div>
+                                </div>
+                                <div class="tab">
+                                    <input type="radio" id="rd2" name="rd">
+                                    <label class="tab-label" for="rd2"><i class="fas fa-check"></i>Item 2</label>
+                                    <div class="tab-content">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, aut.
+                                    </div>
+                                </div>
+                                <div class="tab">
+                                    <input type="radio" id="rd3" name="rd">
+                                    <label class="tab-label" for="rd3"><i class="fas fa-check"></i>Item 3</label>
+                                    <div class="tab-content">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, facilis.
+                                    </div>
+                                </div>
+                                <div class="tab">
+                                    <input type="radio" id="rd4" name="rd">
+                                    <label class="tab-label" for="rd4"><i class="fas fa-check"></i>Item 4</label>
+                                    <div class="tab-content">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, aut.
+                                    </div>
+                                </div>
+                                <div class="tab">
+                                    <input type="radio" id="rd5" name="rd">
+                                    <label class="tab-label" for="rd5"><i class="fas fa-check"></i>Item 5</label>
+                                    <div class="tab-content">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, aut.
+                                    </div>
+                                </div>
+                            </div>
+                            
                         </section>
 
                     </div>
