[+] Styles: Ajustes generales

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="container">
             <hgroup>
                 <h3>Qué podemos ofrecer</h3>
-                <h2>Nuestros servicios</h2>
+                <h2>Nuestros servicios Premium más destacados</h2>
             </hgroup>
             <div id="carousel-services" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner card-deck row w-100 mx-auto" role="listbox">
@@ -314,7 +314,7 @@
                         <section class="us__we-do-it">
                             <hgroup>
                                 <h3>Cotice ahora</h3>
-                                <h2>Cuentenos que desea</h2>
+                                <h2>Cuentenos que desea y trabajemos juntos</h2>
                             </hgroup>
                             <img class="img-fluid" src="./dist/assets/images/roof.jpg" alt="Lo hacemos por UD">    
                         </section>  
@@ -335,7 +335,7 @@
                                     </hgroup>
                                 </div>
                                 <div class="col-12 col-md-6">
-                                    <a class="nav-link my-2 my-sm-0 btn btn-secondary btn__action" href="#">Cotice ahora!</a>
+                                    <a class="nav-link my-2 my-sm-0 btn btn-primary btn__action" href="#">Cotice ahora!</a>
                                 </div>
                             </div>
                         </section>
@@ -431,7 +431,7 @@
 
                     </div>
                     <div class="col-md-6">
-                        <p class="text-center text-md-right mt-1 mt-md-0 pt-2 copyright">Todos los derechos reservados &copy; 2019</p>
+                        <p class="text-center text-md-right copyright">Todos los derechos reservados &copy; 2019</p>
                     </div>
                 </div>
 
