--- a/servicio.html
+++ b/servicio.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="./favicon.png" sizes="128x128" />
 </head>
 
-<body>
+<body class="page page-service service">
     <header class="header">
 
         <section class="header__top">
@@ -123,11 +123,13 @@
 
         <section class="service">
             <div class="container">
-                <hgroup>
-                    <h3>Mantenimiento</h3>
-                    <h2>Fachadas</h2>
-                </hgroup>
-                <img class="img-fluid" src="./dist/assets/images/services/servicio-principal-1.png" alt="Servicio">
+                <div class="page-header">
+                    <hgroup class="page--title">
+                        <h3>Mantenimiento</h3>
+                        <h2>Fachadas</h2>
+                    </hgroup>
+                    <img class="img-fluid outstanding-image" src="./dist/assets/images/services/servicio-principal-1.png" alt="Servicio">
+                </div>
             </div>
             <div class="container">
                 <div class="row">
